added css to booking sections

--- a/index.html
+++ b/index.html
@@ -128,34 +128,15 @@
 		<div id="main-buttons">
 			<div class="container">
 
-				<div class="justify-content-center row">
+				<div class="justify-content-center">
 
 					<div id="controls">
 
-						<select id="country" class="form-control">
-                                <option value="all">All</option>
-                                <option value="au">Australia</option>
-                                <option value="br">Brazil</option>
-                                <option value="ca">Canada</option>
-                                <option value="fr">France</option>
-                                <option value="de">Germany</option>
-                                <option value="mx">Mexico</option>
-                                <option value="ng">Nigeria</option>
-                                <option value="nz">New Zealand</option>
-                                <option value="ie">Ireland</option>
-                                <option value="it">Italy</option>
-                                <option value="za">South Africa</option>
-                                <option value="es">Spain</option>
-                                <option value="pt">Portugal</option>
-                                <option value="us">U.S.A.</option>
-                                <option value="uk" selected>United Kingdom</option>
-                            </select>
-
-					</div>
+				
 					<!--#/controls-->
 
 					<div class="form-group">
-						<input id="autocomplete" class="form-control" placeholder="Enter a city" type="text" />
+						<input id="autocomplete" class="form-control" placeholder="Enter a city in Scotland" type="text" />
                         </div>
 
 					</div>
@@ -187,15 +168,7 @@
 					<div class="row">
 
 						<div id="map" class="col-sm-12 col-md-12 col-12"></div>
-
-						<div class="col-md-6">
-							<div class="justify-content-center row">
-
-								<h5 class="break font-weight-bold mt-3 ml-md-5">Find your perfect break!</h5>
-
-							</div>
 						</div>
-
 						<div id="listing">
 							<div id="results"></div>
 						</div>
