dded more js to main.js file

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<!--./row-->
 
 				<!--Info window-->
-				<div class="justify-content-center row" id="Listings">
+				<div class="justify-content-center row" id="info-window">
 					<table id="resultsTable">
 						<tbody id="results"></tbody>
 					</table>
