resolving merge conflict

--- a/index.html
+++ b/index.html
@@ -44,28 +44,13 @@
 		<div id="landingpicture">
 			<div class=" container text-center d-block w-100">
 
-<<<<<<< HEAD
-=======
-	<div class="jumbotron ">
-		<div class=" container text-center d-block w-100">
-			<div id="landingpicture">
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
+
 				<h1>TheHighlandsBreak</h1>
 				<p>A Scottish get away!</p>
 			</div>
 		</div>
-<<<<<<< HEAD
-		</div>
 	</section>
-=======
-	</div>
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
 	<!-- About -->
-	<main>
-		<section>
-			<div class="container text-center" id="about">
-				<p>Do you love beautiful landscapes and sunsets?</p>
 
 				<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
 					find attractions, restaurants, bars and hotetls in Scotland.</p>
@@ -73,168 +58,114 @@
 		</section>
 		<!--./ End of About 
 -->
-		<!-- Bootstrap/carousel -->
-		<section>
-			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="assets/images/hut.jpeg" class="d-block w-100" alt="hut">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Glamping</h5>
-							<p>Glamping Pod By the Sea in Scotland.</p>
-						</div>
+	<!-- Bootstrap/carousel -->
+	<section>
+		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="assets/images/hut.jpeg" class="d-block w-100" alt="hut">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Glamping</h5>
+						<p>Glamping Pod By the Sea in Scotland.</p>
 					</div>
-					<div class="carousel-item">
-						<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="fairypool">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
-							<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img src="assets/images/hill.jpeg" class="d-block w-100" alt="hill">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Glencoe valley and mountains</h5>
-							<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
 				</div>
-		</section>
-		<!--./ End of Carousel -->
+				<div class="carousel-item">
+					<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="fairypool">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
+						<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="assets/images/hill.jpeg" class="d-block w-100" alt="hill">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Glencoe valley and mountains</h5>
+						<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+	</section>
+	<!--./ End of Carousel -->
 
-		<div id="find">
-			<a>&nbsp;</a>
-		</div>
+	<div id="find">
+		<a>&nbsp;</a>
+	</div>
 
-		<div class="find-text text-center">
+	<div class="find-text text-center">
 
-			<h1>Find your break</h1>
+		<h1>Find your break</h1>
 
-			<br>
+		<br>
 
-			<p>Type in the city of Scotland and choose from one of the three buttons below.</p>
-			<p>You can view additional information for a venue which will be displayed above it's marker
-				by clicking on it's tile.</p>
+		<p>Type in the city of Scotland and choose from one of the three buttons below.</p>
+		<p>You can view additional information for a venue which will be displayed above it's marker
+			by clicking on it's tile.</p>
 
-		</div>
+	</div>
 
-		<!-- #main-button wraps drop down and city input field-->
-		<div id="main-buttons">
-			<div class="container">
+	<!-- #main-button wraps drop down and city input field-->
+	<div id="main-buttons">
+		<div class="container">
 
-				<div class="justify-content-center">
+			<div class="justify-content-center">
 
-					<div id="controls">
+				<div id="controls">
 
 
-						<!--#/controls-->
+					<!--#/controls-->
 
-						<div class="form-group">
-							<input id="autocomplete" class="form-control" placeholder="Enter a city in Scotland" type="text" />
+					<div class="form-group">
+						<input id="autocomplete" class="form-control" placeholder="Enter a city in Scotland" type="text" />
                         </div>
 
-						</div>
+					</div>
 
-						<!--POI buttons-->
-						<div class="justify-content-center row">
+					<!--POI buttons-->
+					<div class="justify-content-center row">
 
-							<button id="hotel-button" type="submit" class="btn" onClick="checkHotels">                  <!--Hotel button-->
+						<button id="hotel-button" type="submit" class="btn" onClick="checkHotels">                  <!--Hotel button-->
                             <img src="assets/images/button-icons/bed.png" alt="Bed"><br>Hotel</button>
 
-							<button id="restaurant-button" type="submit" class="btn" onClick="checkRestaurants">         <!--Restaurant button-->
+						<button id="restaurant-button" type="submit" class="btn" onClick="checkRestaurants">         <!--Restaurant button-->
                             <img src="assets/images/button-icons/restaurant.png" alt="Restaurant"><br>Restaurants</button>
 
-							<button id="attraction-button" type="submit" class="btn" onClick="checkAttractions">         <!--Attractions button-->
+						<button id="attraction-button" type="submit" class="btn" onClick="checkAttractions">         <!--Attractions button-->
                             <img src="assets/images/button-icons/monument.png" alt="Monument"><br>Attractions</button>
 
-						</div>
-
 					</div>
-					<!--./container-->
-
-				</div>
-				<!--#/main-buttons-->
-
-				<div id="main">
-					<div class="container container-fluid">
-
-						<!-- listings and map-->
-						<div class="row">
-
-							<div id="map" class="col-sm-12 col-md-12 col-12"></div>
-						</div>
-<<<<<<< HEAD
-						<!-- Google Map -->
-						<!--The div element for the map -->
-
-						<script>
-							function initMap() {
-=======
-						<!--./row-->
-
-						<!--Info window-->
-						<div class="justify-content-center row" id="info-window">
-							<table id="resultsTable">
-								<tbody id="results"></tbody>
-							</table>
-						</div>
-
-						<div style="display">
-							<div id="info-content">
-								<table>
-									<tr id="iw-url-row" class="iw_table_row">
-										<td id="iw-icon" class="iw_table_icon"></td>
-										<td id="iw-url"></td>
-									</tr>
-									<tr id="iw-address-row" class="iw_table_row">
-										<td class="iw_attribute_name">Address:</td>
-										<td id="iw-address"></td>
-									</tr>
-									<tr id="iw-phone-row" class="iw_table_row">
-										<td class="iw_attribute_name">Telephone:</td>
-										<td id="iw-phone"></td>
-									</tr>
-									<tr id="iw-rating-row" class="iw_table_row">
-										<td class="iw_attribute_name">Rating:</td>
-										<td id="iw-rating"></td>
-									</tr>
-									<tr id="iw-website-row" class="iw_table_row">
-										<td class="iw_attribute_name">Website:</td>
-										<td id="iw-website"></td>
-									</tr>
-								</table>
-							</div>
-						</div>
-						<!--#/info-content-->
-					</div>
-					<!--./Display style for info window-->
 
 				</div>
 				<!--./container-->
+
 			</div>
-			<!--#/main-->
+			<!--#/main-buttons-->
 
-			</section>
-			<!--End of Find-->
-			<!-- Google Map -->
-			<!--The div element for the map -->
+			<div id="main">
+				<div class="container container-fluid">
 
-			<script>
-				function initMap() {
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
+					<!-- listings and map-->
+					<div class="row">
+
+						<div id="map" class="col-sm-12 col-md-12 col-12"></div>
+					</div>
+					<!-- Google Map -->
+					<!--The div element for the map -->
+
+					<script>
+						function initMap() {
     var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 6,
         center: { lat: 55.953251, lng:  -3.188267 }
@@ -242,183 +173,154 @@
         }
 
     
-<<<<<<< HEAD
-						</script>
-						<!--./ End of Map -->
+					</script>
+					<!--./ End of Map \-->
 
-						<!--./row-->
+					<!--./row-->
 
-						<!--Info window-->
-						<div class="justify-content-center row" id="info-window">
-							<table id="resultsTable">
-								<tbody id="results"></tbody>
+					<!--Info window-->
+					<div class="justify-content-center row" id="info-window">
+						<table id="resultsTable">
+							<tbody id="results"></tbody>
+						</table>
+					</div>
+
+					<div style="display">
+						<div id="info-content">
+							<table>
+								<tr id="iw-url-row" class="iw_table_row">
+									<td id="iw-icon" class="iw_table_icon"></td>
+									<td id="iw-url"></td>
+								</tr>
+								<tr id="iw-address-row" class="iw_table_row">
+									<td class="iw_attribute_name">Address:</td>
+									<td id="iw-address"></td>
+								</tr>
+								<tr id="iw-phone-row" class="iw_table_row">
+									<td class="iw_attribute_name">Telephone:</td>
+									<td id="iw-phone"></td>
+								</tr>
+								<tr id="iw-rating-row" class="iw_table_row">
+									<td class="iw_attribute_name">Rating:</td>
+									<td id="iw-rating"></td>
+								</tr>
+								<tr id="iw-website-row" class="iw_table_row">
+									<td class="iw_attribute_name">Website:</td>
+									<td id="iw-website"></td>
+								</tr>
 							</table>
 						</div>
-
-						<div style="display">
-							<div id="info-content">
-								<table>
-									<tr id="iw-url-row" class="iw_table_row">
-										<td id="iw-icon" class="iw_table_icon"></td>
-										<td id="iw-url"></td>
-									</tr>
-									<tr id="iw-address-row" class="iw_table_row">
-										<td class="iw_attribute_name">Address:</td>
-										<td id="iw-address"></td>
-									</tr>
-									<tr id="iw-phone-row" class="iw_table_row">
-										<td class="iw_attribute_name">Telephone:</td>
-										<td id="iw-phone"></td>
-									</tr>
-									<tr id="iw-rating-row" class="iw_table_row">
-										<td class="iw_attribute_name">Rating:</td>
-										<td id="iw-rating"></td>
-									</tr>
-									<tr id="iw-website-row" class="iw_table_row">
-										<td class="iw_attribute_name">Website:</td>
-										<td id="iw-website"></td>
-									</tr>
-								</table>
-							</div>
-						</div>
-						<!--#/info-content-->
 					</div>
-					<!--./Display style for info window-->
-
+					<!--#/info-content-->
 				</div>
-				<!--./container-->
+				<!--./Display style for info window-->
+
 			</div>
-			<!--#/main-->
+			<!--./container-->
+		</div>
+		<!--#/main-->
 
-			</section>
-			<!--End of Find-->
+		</section>
+		<!--End of Find-->
 
-			<!--- Booking -->
+		<!--- Booking -->
 
-			<section class="form-bg">
-				<div id="book">
-					<a>&nbsp;</a>
+		<section class="form-bg">
+			<div id="book">
+				<a>&nbsp;</a>
+			</div>
+
+			<div class="container">
+
+				<div class="booking-text text-center">
+					<h2>Book with us</h2>
+					<p>Fill out the contact form below and we will be in touch to help you with your next highland
+						breaks.</p>
 				</div>
 
-				<div class="container">
+				<div id="booking-form" class="row">
 
-					<div class="booking-text text-center">
-						<h2>Book with us</h2>
-						<p>Fill out the contact form below and we will be in touch to help you with your next highland
-							breaks.</p>
-					</div>
-
-					<div id="booking-form" class="row">
-
-=======
-			</script>
-			<!--./ End of Map -->
-
-			<!--- Booking -->
-
-			<section class="form-bg">
-				<div id="book">
-					<a>&nbsp;</a>
-				</div>
-
-				<div class="container">
-
-					<div class="booking-text text-center">
-						<h2>Book with us</h2>
-						<p>Fill out the contact form below and we will be in touch to help you with your next highland
-							breaks.</p>
-					</div>
-
-					<div id="booking-form" class="row">
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
-						<form id="booking-form-form" onsubmit="return validateForm(this)" method="POST"
-							class="col-10 offset-1">
+					<form id="booking-form-form" onsubmit="return validateForm(this)" method="POST"
+						class="col-10 offset-1">
+						<div class="form-group">
+							<label for="name">Name</label>
+							<input type="text" class="form-control" id="name" name="fromName" required/>
+                        </div>
 							<div class="form-group">
-								<label for="name">Name</label>
-								<input type="text" class="form-control" id="name" name="fromName" required/>
+								<label for="email">Email address</label>
+								<input type="email" class="form-control" id="email" name="emailAddress" required/>
                         </div>
 								<div class="form-group">
-									<label for="email">Email address</label>
-									<input type="email" class="form-control" id="email" name="emailAddress" required/>
+									<label for="telephone">Telephone Number</label>
+									<input type="tel" name="telephone" id="telephone" class="form-control" required/>
                         </div>
 									<div class="form-group">
-										<label for="telephone">Telephone Number</label>
-										<input type="tel" name="telephone" id="telephone" class="form-control" required/>
-                        </div>
-										<div class="form-group">
-											<label for="poi-selection">Select a category</label>
-											<select class="form-control" id="poi-selection" name="poi">
+										<label for="poi-selection">Select a category</label>
+										<select class="form-control" id="poi-selection" name="poi">
                                 <option>Hotel</option>
                                 <option>Restaurant</option>
                                 <option>Attraction</option>
                             </select>
-										</div>
-										<div class="form-group">
-											<label for="details">Addition information</label>
-											<textarea class="form-control" id="details" rows="3" name="message"></textarea>
-										</div>
+									</div>
+									<div class="form-group">
+										<label for="details">Addition information</label>
+										<textarea class="form-control" id="details" rows="3" name="message"></textarea>
+									</div>
 
-										<input id="submit-form" class="btn text-uppercase" value="Send message" type="submit"/>
+									<input id="submit-form" class="btn text-uppercase" value="Send message" type="submit"/>
 
                     </form>
 
-									</div>
-			</section>
-	</main>
-	<!--./ Booking End (will add email function once maps is done)-->
-	<!-- Modal -->
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-			<div class="row">
+								</div>
+		</section>
+		</main>
+		<!--./ Booking End (will add email function once maps is done)-->
+		<!-- Modal -->
+		<div id="myModal" class="modal">
+			<div class="modal-content">
+				<div class="row">
 
-				<span class="close-cross col-1">&times;</span>
+					<span class="close-cross col-1">&times;</span>
 
-				<div class="text-center col-11">
-					<p>Thank you!</p>
-					<p>We look forward to speaking with you.</p>
+					<div class="text-center col-11">
+						<p>Thank you!</p>
+						<p>We look forward to speaking with you.</p>
 
-					<button id="close" class="btn text-uppercase" type="button">Close</button>
+						<button id="close" class="btn text-uppercase" type="button">Close</button>
+					</div>
+
 				</div>
-
+				<!--./row-->
 			</div>
-			<!--./row-->
 		</div>
-	</div>
-	<!--./modal-content-->
+		<!--./modal-content-->
 
-	<!-- Footer -->
-	<footer class="bg-dark text-white py-4">
-		<div class="col-12 ml-auto text-center" id="social-links">
-			<a href="https://en-gb.facebook.com" target="_blank">
+		<!-- Footer -->
+		<footer class="bg-dark text-white py-4">
+			<div class="col-12 ml-auto text-center" id="social-links">
+				<a href="https://en-gb.facebook.com" target="_blank">
 
-				<i class="fab fa-facebook-f"></i>
-			</a>
-			<a href="https://www.instagram.com" target="_blank">
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a href="https://www.instagram.com" target="_blank">
 
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="https://twitter.com" target="_blank">
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a href="https://twitter.com" target="_blank">
 
-				<i class="fab fa-twitter"></i>
-			</a>
-		</div>
+					<i class="fab fa-twitter"></i>
+				</a>
+			</div>
 
-		<!-- Linked to github -->
-		<div class="col-12 text-center small">
-			<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
-		</div>
-	</footer>
-	<!--./footer end -->
-<<<<<<< HEAD
+			<!-- Linked to github -->
+			<div class="col-12 text-center small">
+				<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
+			</div>
+		</footer>
+		<!--./footer end -->
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
-=======
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
