added email function

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 	</section>
 	<!-- About -->
 
-				<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
-					find attractions, restaurants, bars and hotetls in Scotland.</p>
-			</div>
-		</section>
-		<!--./ End of About 
+	<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
+		find attractions, restaurants, bars and hotetls in Scotland.</p>
+	</div>
+	</section>
+	<!--./ End of About 
 -->
 	<!-- Bootstrap/carousel -->
 	<section>
@@ -324,7 +324,13 @@
 
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js">
+		</script>
+		<script type="text/javascript">
+			(function(){
+      emailjs.init("user_7XVYOD9tVJ4WxyFxCtSC3");
+   })();
+		</script>
 </body>
 
 </html>
