--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 		<div id="landingpicture">
 			<div class=" container text-center d-block w-100">
 
-
 				<h1>TheHighlandsBreak</h1>
 				<p>A Scottish get away!</p>
 			</div>
 		</div>
 	</section>
 	<!-- About -->
-
+<section id="about">
 	<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
 		find attractions, restaurants, bars and hotetls in Scotland.</p>
 	</div>
