changed booking backgroun

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/main.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js">
+	</script>
+	<script type="text/javascript">
+		(function(){
+      emailjs.init("user_7XVYOD9tVJ4WxyFxCtSC3");
+   })();
+	</script>
 
 	<title>TheHighlandsBreak</title>
 </head>
@@ -48,12 +55,12 @@
 				<p>A Scottish get away!</p>
 			</div>
 		</div>
-	</section>
-	<!-- About -->
-<section id="about">
-	<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
-		find attractions, restaurants, bars and hotetls in Scotland.</p>
-	</div>
+		<!-- About -->
+
+		<div class="text-center" id="about-text">
+			<h4>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
+				find attractions, restaurants, bars and hotetls in Scotland.</h4>
+		</div>
 	</section>
 	<!--./ End of About 
 -->
@@ -323,13 +330,7 @@
 
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js">
-		</script>
-		<script type="text/javascript">
-			(function(){
-      emailjs.init("user_7XVYOD9tVJ4WxyFxCtSC3");
-   })();
-		</script>
+
 </body>
 
 </html>
