--- a/index.html
+++ b/index.html
@@ -44,28 +44,13 @@
 		<div id="landingpicture">
 			<div class=" container text-center d-block w-100">
 
-<<<<<<< HEAD
-=======
-	<div class="jumbotron ">
-		<div class=" container text-center d-block w-100">
-			<div id="landingpicture">
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
+
 				<h1>TheHighlandsBreak</h1>
 				<p>A Scottish get away!</p>
 			</div>
 		</div>
-<<<<<<< HEAD
-		</div>
 	</section>
-=======
-	</div>
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
-	<!-- About -->
-	<main>
-		<section>
-			<div class="container text-center" id="about">
-				<p>Do you love beautiful landscapes and sunsets?</p>
+	<!-- Aboutets?</p>
 
 				<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
 					find attractions, restaurants, bars and hotetls in Scotland.</p>
@@ -176,65 +161,11 @@
 
 							<div id="map" class="col-sm-12 col-md-12 col-12"></div>
 						</div>
-<<<<<<< HEAD
 						<!-- Google Map -->
 						<!--The div element for the map -->
 
 						<script>
 							function initMap() {
-=======
-						<!--./row-->
-
-						<!--Info window-->
-						<div class="justify-content-center row" id="info-window">
-							<table id="resultsTable">
-								<tbody id="results"></tbody>
-							</table>
-						</div>
-
-						<div style="display">
-							<div id="info-content">
-								<table>
-									<tr id="iw-url-row" class="iw_table_row">
-										<td id="iw-icon" class="iw_table_icon"></td>
-										<td id="iw-url"></td>
-									</tr>
-									<tr id="iw-address-row" class="iw_table_row">
-										<td class="iw_attribute_name">Address:</td>
-										<td id="iw-address"></td>
-									</tr>
-									<tr id="iw-phone-row" class="iw_table_row">
-										<td class="iw_attribute_name">Telephone:</td>
-										<td id="iw-phone"></td>
-									</tr>
-									<tr id="iw-rating-row" class="iw_table_row">
-										<td class="iw_attribute_name">Rating:</td>
-										<td id="iw-rating"></td>
-									</tr>
-									<tr id="iw-website-row" class="iw_table_row">
-										<td class="iw_attribute_name">Website:</td>
-										<td id="iw-website"></td>
-									</tr>
-								</table>
-							</div>
-						</div>
-						<!--#/info-content-->
-					</div>
-					<!--./Display style for info window-->
-
-				</div>
-				<!--./container-->
-			</div>
-			<!--#/main-->
-
-			</section>
-			<!--End of Find-->
-			<!-- Google Map -->
-			<!--The div element for the map -->
-
-			<script>
-				function initMap() {
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
     var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 6,
         center: { lat: 55.953251, lng:  -3.188267 }
@@ -242,7 +173,6 @@
         }
 
     
-<<<<<<< HEAD
 						</script>
 						<!--./ End of Map -->
 
@@ -310,28 +240,6 @@
 
 					<div id="booking-form" class="row">
 
-=======
-			</script>
-			<!--./ End of Map -->
-
-			<!--- Booking -->
-
-			<section class="form-bg">
-				<div id="book">
-					<a>&nbsp;</a>
-				</div>
-
-				<div class="container">
-
-					<div class="booking-text text-center">
-						<h2>Book with us</h2>
-						<p>Fill out the contact form below and we will be in touch to help you with your next highland
-							breaks.</p>
-					</div>
-
-					<div id="booking-form" class="row">
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
 						<form id="booking-form-form" onsubmit="return validateForm(this)" method="POST"
 							class="col-10 offset-1">
 							<div class="form-group">
@@ -410,14 +318,8 @@
 		</div>
 	</footer>
 	<!--./footer end -->
-<<<<<<< HEAD
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
-=======
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
-
->>>>>>> 332a2fae569a2f9259c48b38700345c52efeacab
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 
 		<script async defer
