--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>TheHighlandsBreak</title>
+
+	<!--Email JS-->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+	<script type="text/javascript">
+		(function(){
+      emailjs.init("user_7XVYOD9tVJ4WxyFxCtSC3");
+   })();
+	</script>
 </head>
 
 <body>
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandsBreak</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,10 +60,10 @@
 	</section>
 	<!-- About -->
 	<section>
-    <div class="text-center"
-		<h2>About</h2>
-		<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
-			find attractions, restaurants, bars and hotetls in Scotland.</p>
+		<div class="text-center" <h1>About</h1>
+
+			<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
+				find attractions, restaurants, bars and hotetls in Scotland.</p>
 		</div>
 	</section>
 	<!--./ End of About 
@@ -323,8 +331,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
 		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
 		</script>
