--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<h3>Here at TheHighlandsBreak we want to keep the stress away!</h3>
 			<br>
 			<p>We are here to help you quickly and easily
-				find attractions, restaurants, bars and hotetls in Scotland..</p>
+				find attractions, restaurants, bars and hotetls in Scotland.</p>
 
 		</div>
 		<!--./ End of About 
@@ -316,15 +316,15 @@
 		<div class="col-12 ml-auto text-center" id="social-links">
 
 			<a href="https://en-gb.facebook.com" target="_blank">
-
+				<!--Facebook-->
 				<i class="fab fa-facebook-f"></i>
 			</a>
 			<a href="https://www.instagram.com" target="_blank">
-
+				<!--Instagram-->
 				<i class="fab fa-instagram"></i>
 			</a>
 			<a href="https://twitter.com" target="_blank">
-
+				<!--Twitter-->
 				<i class="fab fa-twitter"></i>
 			</a>
 		</div>
